Implemented symbolic differentiation

--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Diff Demo</title>
     <meta charset="UTF-8" />
-
     <script src="src/index.js" type="module"></script>
 </head>
 
 <body>
-
     <div class="container" id="mathContainer">
-        <div>
-            <button id = 'newExprButton'>
-                Show new expression!
-            </button>
-        </div>
-    </div>
+        <h1>Symbolic Differentiation</h1>
 
+        <!-- Поле для ввода выражения -->
+        <input type="text" id="expression" placeholder="Enter expression (e.g., x^2 - 4*x)" />
+
+        <!-- Поле для ввода переменной -->
+        <input type="text" id="variable" placeholder="Variable (e.g., x)" />
+
+        <!-- Кнопка для запуска дифференцирования -->
+        <button id="diffButton">Differentiate</button>
+
+        <!-- Место для вывода результата -->
+        <p id="result"></p>
+    </div>
 </body>
 </html>
